--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
-    "hono": "^4.9.9"
+    "hono": "^4.9.9",
+    "pino": "^9.12.0",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^13.1.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
