--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
+    "@neondatabase/serverless": "^1.0.1",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
+    "drizzle-orm": "^0.44.5",
     "hono": "^4.9.9",
     "pino": "^9.12.0",
     "pino-http": "^10.5.0",
@@ -20,6 +22,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
     "@types/node": "^20.11.17",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^9.36.0",
     "eslint-plugin-format": "^1.0.2",
     "tsx": "^4.7.1",
