--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hono/node-server": "^1.19.5",
     "@neondatabase/serverless": "^1.0.1",
+    "better-auth": "^1.3.24",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.44.5",
