feat: add auth schema, github login and auth routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "types": [
       "node"
     ],
+    "allowImportingTsExtensions": true,
     "strict": true,
     "outDir": "./dist",
     "verbatimModuleSyntax": true,
