--- a/package.json
+++ b/package.json
@@ -8,20 +8,31 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.932.0",
+    "@aws-sdk/client-sqs": "^3.936.0",
+    "@aws-sdk/s3-request-presigner": "^3.932.0",
     "@hono/node-server": "^1.19.5",
+    "@hono/standard-validator": "^0.1.5",
+    "@hono/zod-validator": "^0.7.4",
     "@neondatabase/serverless": "^1.0.1",
+    "@ngrok/ngrok": "^1.6.0",
     "better-auth": "^1.3.24",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.9",
+    "hummus-recipe": "^2.0.1",
+    "nanoid": "^5.1.6",
+    "pdf-lib": "^1.17.1",
     "pino": "^9.12.0",
     "pino-http": "^10.5.0",
     "pino-pretty": "^13.1.1",
-    "zod": "^4.1.11"
+    "svix": "^1.81.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
+    "@types/hummus-recipe": "^1.8.8",
     "@types/node": "^20.11.17",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9.36.0",
